# nwest-shared-component-library

./: Cargo.toml
.github/workflows/: docs.yml  rust.yml
src/: decimal_attribute.rs  errors.rs  integer_attribute.rs  lib.rs  stat_enum.rs  statistic.rs  traits.rs
src/enums/: base_stat_enum.rs  mod.rs  skill_enum.rs  stat_enum.rs  stat_modifier_enum.rs  type_category_enum.rs
src/integer_attribute/: main.rs  mod.rs
tests/: decimal_attribute.rs  integer_attribute.rs
