[package]
name = "nwest-shared-component-library"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.14.0"
thiserror = "1.0.61"

[dependencies.serde]
version = "1.0.204"
features = ["derive"]


[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_code = "warn"
unreachable_patterns = "warn"

[lints.clippy]
module_name_repetition = "allow"
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
