[package]
name = "nwest-shared-component-library"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.14.0"
thiserror = "1.0.61"

[dependencies.serde]
version = "1.0.204"
features = ["derive"]


[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_code = "warn"
unreachable_patterns = "warn"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 2 }
unwrap_used = "deny"
module_name_repetition = "allow"
